Fixes Spacing of Header Component

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,5 +1,5 @@
 .container {
-  min-height: 70vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -7,9 +7,10 @@
   text-align: center;
 
   .typing {
+    position: absolute;
+    top: 35vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: auto;
     font-size: 2em;
     span {
@@ -67,34 +68,33 @@
   .explore {
     position: absolute;
     bottom: 40px;
-  }
+    .arrow,
+    .arrow:before {
+      position: absolute;
+      left: 50%;
+    }
 
-  .arrow,
-  .arrow:before {
-    position: absolute;
-    left: 50%;
-  }
+    .arrow {
+      width: 40px;
+      height: 40px;
+      align-self: flex-end;
+      margin: -20px 0 0 -20px;
+      -webkit-transform: rotate(45deg);
+      transform: rotate(45deg);
+      border-right: 2px #fff solid;
+      border-bottom: 2px #fff solid;
+    }
 
-  .arrow {
-    width: 40px;
-    height: 40px;
-    bottom: 20px;
-    margin: -20px 0 0 -20px;
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-    border-right: 2px #fff solid;
-    border-bottom: 2px #fff solid;
-  }
-
-  .arrow:before {
-    content: '';
-    width: 20px;
-    height: 20px;
-    top: 50%;
-    margin: -10px 0 0 -10px;
-    border-right: 1px #fff solid;
-    border-bottom: 1px #fff solid;
-    animation: arrow 2s infinite;
+    .arrow:before {
+      content: '';
+      width: 20px;
+      height: 20px;
+      top: 50%;
+      margin: -10px 0 0 -10px;
+      border-right: 1px #fff solid;
+      border-bottom: 1px #fff solid;
+      animation: arrow 2s infinite;
+    }
   }
 }
 
